# oanda_converter

./: Cargo.toml  README.md
model/: Cargo.toml
model/src/: definition_docs.rs  defintion_docs.rs  endpoint_docs.rs  lib.rs
oanda_converter/: Cargo.toml
oanda_template_old/src/: host.rs  lib.rs
oanda_v2/: Cargo.toml  build.rs  error.rs
oanda_v2/src/: client.rs  definitions.rs  endpoints.rs  error.rs  host.rs  lib.rs
oanda_v2/src/definitions/: AcceptDatetimeFormat.rs  Account.rs  AccountChanges.rs  AccountChangesState.rs  AccountFinancingMode.rs  AccountID.rs  AccountProperties.rs  AccountSummary.rs  AccountUnits.rs  AccumulatedAccountState.rs  CalculatedAccountState.rs  CalculatedPositionState.rs  CalculatedTradeState.rs  CancellableOrderType.rs  CandleSpecification.rs  Candlestick.rs  CandlestickData.rs  CandlestickGranularity.rs  CandlestickResponse.rs  ClientComment.rs  ClientConfigureRejectTransaction.rs  ClientConfigureTransaction.rs  ClientExtensions.rs  ClientID.rs  ClientPrice.rs  ClientRequestID.rs  ClientTag.rs  CloseTransaction.rs  ConversionFactor.rs  CreateTransaction.rs  Currency.rs  DailyFinancingTransaction.rs  DateTime.rs  DayOfWeek.rs  DecimalNumber.rs  DelayedTradeClosureTransaction.rs  Direction.rs  DividendAdjustmentTransaction.rs  DynamicOrderState.rs  FinancingDayOfWeek.rs  (+302 more)
oanda_v2/src/endpoints/: account.rs  order.rs  position.rs  pricing.rs  trade.rs  transaction.rs
oanda_v2/src/endpoints/account/: responses.rs
oanda_v2/src/endpoints/account/responses/: accounts.rs  changes.rs  configuration.rs  get.rs  instruments.rs  summary.rs
oanda_v2/src/endpoints/order/: responses.rs
oanda_v2/src/endpoints/order/responses/: cancel  cancel.rs  client_extensions  client_extensions.rs  get.rs  orders.rs  pending_orders  pending_orders.rs  put  put.rs
oanda_v2/src/endpoints/position/: responses.rs
oanda_v2/src/endpoints/position/responses/: close  close.rs  get.rs  open_positions  open_positions.rs  positions.rs
oanda_v2/src/endpoints/pricing/: responses.rs
oanda_v2/src/endpoints/pricing/responses/: candles.rs  latest.rs  pricing.rs  stream.rs
oanda_v2/src/endpoints/trade/: responses.rs
oanda_v2/src/endpoints/trade/responses/: client_extensions  client_extensions.rs  close  close.rs  get  get.rs  open_trades  open_trades.rs  orders  orders.rs  trades.rs
oanda_v2/src/endpoints/transaction/: responses.rs
oanda_v2/src/endpoints/transaction/responses/: get.rs  idrange.rs  sinceid.rs  stream.rs  transactions.rs
scraper/: Cargo.toml
scraper/src/: lib.rs
serialize_all/: Cargo.toml  content.yaml
serialize_all/src/: main.rs
uses-inserter/: Cargo.toml
uses-inserter/examples/: insert_uses.rs
uses-inserter/src/: enum_parsing.rs  error.rs  fields.rs  fn_parsing.rs  impl_parsing.rs  lib.rs  mod_name.rs  recurse_sub_modules.rs  struct_parsing.rs
uses-inserter/tests/: run-on-writer.rs
utils/: Cargo.toml
utils/src/: error.rs  lib.rs
web_scraper/: Cargo.toml  TODO.md
web_scraper/src/: definitions.rs  endpoint_docs.rs  error.rs  lib.rs
web_scraper/src/definitions/: struct.pest  struct_parser.rs
web_scraper/src/endpoint_docs/: bodies.rs  headers.rs
web_scraper/src/endpoint_docs/bodies/: responses.rs
web_scraper/test_content/: errors.html
writer/: Cargo.toml
writer/src/: definitions.rs  endpoints.rs  error.rs  gen_client.rs  gen_definition.rs  gen_endpoint.rs  gen_error.rs  gen_lib.rs  gen_mods.rs  lib.rs  main.rs  shared.rs  state.rs  util.rs
writer/src/endpoints/: rest_call_ext.rs
writer/src/endpoints/rest_call_ext/: method_namer.rs
writer/src/gen_definition/: gen_row.rs  gen_struct.rs  row.rs
writer/src/gen_endpoint/: gen_responses.rs
writer_codegen/: Cargo.toml
writer_codegen/src/: definitions.rs  endpoints.rs  lib.rs  shared.rs
writer_codegen/src/endpoints/rest_call_ext/: method_namer.rs
writer_no_quote/: Cargo.toml
writer_no_quote/src/: error.rs
writer_no_quote/src/endpoints/: rest_call_ext.rs
