[package]
name = "oanda_v2"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse-display = "0.8.2"
reqwest = { version = "0.11.18", features = ["tokio-rustls", "deflate", "brotli", "gzip"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.96"
textwrap = "0.16.0"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "net", "macros"] }
error-stack = "0.4.1"
thiserror = "1.0.51"

[build-dependencies]
error-stack = "0.4.1"
model = { version = "0.1.0", path = "../model" }
serde_yaml = "0.9.25"
tracing-subscriber = "0.3.17"
writer = { path = "../writer" }
uses-inserter = { version = "0.1.0", path = "../uses-inserter" }

[dev-dependencies]
lazy_static = "1.4.0"
