[package]
name = "uses-inserter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.66", features = ["span-locations"] }
quote = "1.0.29"
syn = { version = "2.0.26", features = ["full"] }
