[package]
name = "uses-inserter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.4.1"
itertools = "0.12.1"
log = { version = "0.4.21", features = ["std"] }
proc-macro2 = { version = "1.0.78", features = ["span-locations"] }
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full"] }
tracing = "0.1.40"
utils = { version = "0.1.0", path = "../utils" }

[dev-dependencies]
pretty_assertions = "1.4.0"
pretty_env_logger = "0.4.0"
