[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
change-case = "0.2.0"
error-stack = "0.4.1"
proc-macro2 = "1.0.78"
quote = "1.0.35"
rust-format = { version = "0.3.4", features = ["pretty_please", "post_process"] }
textwrap = "0.16.1"
tracing = "0.1.40"
