[package]
name = "web_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
error-stack = { version = "0.3.1", features = ["spantrace"] }
reqwest = { version = "0.11.16", default-features = false, features = ["gzip", "deflate", "brotli", "rustls-tls", "h3", "trust-dns"] }
scraper = "0.16.0"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros", "net", "rt-multi-thread", "test-util"] }
model = { path = "../model" }
pest = { version = "2.5.7", features = ["pretty-print"] }
pest_derive = "2.5.7"
pretty_assertions = "1.3.0"
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde = { version = "1.0.162", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }
