[package]
name = "web_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
error-stack = { version = "0.3.1", features = ["spantrace"] }
reqwest = { version = "0.11.24", default-features = false, features = ["gzip", "deflate", "brotli", "rustls-tls", "h3", "trust-dns"] }
scraper = "0.16.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "net", "rt-multi-thread", "test-util"] }
model = { path = "../model" }
pest = { version = "2.7.8", features = ["pretty-print"] }
pest_derive = "2.7.8"
pretty_assertions = "1.4.0"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.197", features = ["derive"] }
url = { version = "2.5.0", features = ["serde"] }
quote = "1.0.35"
parse-display = "0.8.2"
itertools = "0.12.1"
