[package]
name = "writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.3.1"
model = { version = "0.1.0", path = "../model" }
proc-macro2 = { version = "1.0.66", features = ["span-locations"] }
quote = "1.0.29"
rust-format = { version = "0.3.4", features = ["token_stream", "prettyplease", "post_process", "pretty_please"] }
rustfmt = "0.10.0"
syn = "2.0.26"
