[package]
name = "writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
change-case = "0.2.0"
derive_deref = "1.1.1"
error-stack = "0.4"
itertools = "0.12.1"
lazy_static = "1.4.0"
model = { version = "0.1.0", path = "../model" }
proc-macro2 = { version = "1.0.78", features = ["span-locations"] }
quote = "1.0.35"
rust-format = { version = "0.3.4", features = ["token_stream", "prettyplease", "post_process", "pretty_please"] }
rustfmt = "0.10.0"
serde_yaml = "0.9.32"
syn = "2.0.52"
textwrap = "0.16.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utils = { version = "0.1.0", path = "../utils" }

[dev-dependencies]
indoc = "2.0.4"
pretty_assertions = "1.4.0"
