[package]
name = "writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = "0.2.0"
convert_case = "0.6.0"
error-stack = "0.3.1"
lazy_static = "1.4.0"
model = { version = "0.1.0", path = "../model" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
indoc = "2.0.1"
pretty_assertions = "1.3.0"
serde_yaml = "0.9.21"
syntect = "5.0.0"
tempfile = "3.5.0"
